# baccarat_vision_v2.0

./: CLAUDE_CODE_IMPROVEMENT_PROMPT.md  README.md  SpinQuest _ The #1 Social Casino, Fun & Free to Play.html  baccarat_library.sqlite  baccarat_vision_prompt.md  card_samples.html  pyproject.toml
SpinQuest _ The #1 Social Casino, Fun & Free to Play_files/: 0miUKvv_Cnm2Z2uvuj_EBz0fdEf7l7fGqwPQeAUU0ToE51s  0miUKvv_DHq2AQ7YzTy_YDYBJAjgl-mcvEiKOA0f0z4DBcpy51s  1184107506485238  7891ca96-e73f-4a85-96f9-5b59bc5351e3.js  BS914TWP.css  Btjsz8pn.css  common-styles.aacccfa4.min.css  config.js  events.js  f.txt  gc-html5.js  geotoken.js  gtm.js  js  lobbyButtonIcon1761250600408  main.6e15c69b.min.css  main.93f64bbf.js  no-commission-baccarat-desktop.4d6b10d6.min.css  runtime.4992d418.js  s.js  saved_resource  saved_resource(1)  saved_resource(2).html  saved_resource(3).html  saved_resource.html  src_lobby_lobby-d_component_tsx.336bc199.min.css  vendor.aca24a4d.min.css
config/: default.yaml
debug_samples/: sample_1781435189195.html  sample_1781436500299.html  sample_1781437484679.html  sample_1781558892836.html  sample_1782377649135.html  sample_1782380272240.html  sample_1782382105316.html  sample_1782382150219.html  sample_1782382445569.html  sample_1782385186841.html  sample_1782385380831.html  sample_1782387449489.html  sample_1782388989724.html  sample_1782389293875.html  sample_1782389339170.html  sample_1782389432003.html  sample_1782390563952.html  sample_1782391288522.html  sample_1782391840869.html  sample_1782393655038.html  sample_1782393686261.html  sample_1782394390057.html  sample_1782394390058.html  sample_1782395414232.html  sample_1782395414238.html  sample_1782395608726.html  sample_1782395608730.html  sample_1782396220779.html  sample_1782396220781.html  sample_1782396564316.html  sample_1782396564317.html
extension/: README.md  background.js  content.js  manifest.json  overlay.css
tests/: test_bet_spread.py  test_capture_pipeline.py  test_card_reader.py  test_controller.py  test_dynamic_spread.py  test_learning.py  test_patterns.py  test_persistence.py  test_probability.py  test_real_screenshot.py  (+4 more)
(+42 files in other folders)
